[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/flag-united-kingdom.png" type="Texture" id=1]
[ext_resource path="res://main.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 720, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopContainer" type="HBoxContainer" parent="MainContainer"]
margin_right = 720.0
margin_bottom = 198.0

[node name="PanelContainer" type="PanelContainer" parent="MainContainer/TopContainer"]
margin_right = 205.0
margin_bottom = 198.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/TopContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 198.0
margin_bottom = 191.0
rect_min_size = Vector2( 100, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainContainer/TopContainer/PanelContainer/VBoxContainer"]
margin_right = 191.0
margin_bottom = 14.0
text = "Select Locale"
align = 1

[node name="English" type="Button" parent="MainContainer/TopContainer/PanelContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 191.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 30 )
text = "English"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spanish" type="Button" parent="MainContainer/TopContainer/PanelContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 191.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 30 )
text = "Spanish"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Japanese" type="Button" parent="MainContainer/TopContainer/PanelContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 191.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 30 )
text = "Japanese"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Laos" type="Button" parent="MainContainer/TopContainer/PanelContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 191.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 30 )
text = "Laos"

[node name="Thai" type="Button" parent="MainContainer/TopContainer/PanelContainer/VBoxContainer"]
margin_top = 154.0
margin_right = 191.0
margin_bottom = 184.0
rect_min_size = Vector2( 0, 30 )
text = "Thai"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer2" type="PanelContainer" parent="MainContainer/TopContainer"]
margin_left = 209.0
margin_right = 720.0
margin_bottom = 198.0
size_flags_horizontal = 3

[node name="Description" type="Label" parent="MainContainer/TopContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 32.0
margin_right = 504.0
margin_bottom = 165.0
text = "This is a demo of how a game can be internationalized.
Translations are created in a CSV file and then imported into Godot.

Use a supported TTF/OTF font is required for this demo to run.

Godot allow internationalized text to change automatically when the locale is
modified. Resources can also be set internationaled alternatives and replaced
automatically on locale change."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MainContainer"]
margin_top = 202.0
margin_right = 720.0
margin_bottom = 380.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="MainContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 713.0
margin_bottom = 171.0

[node name="BottomContainer" type="HBoxContainer" parent="MainContainer/PanelContainer/CenterContainer"]
margin_left = 203.0
margin_top = 2.0
margin_right = 503.0
margin_bottom = 162.0
rect_min_size = Vector2( 300, 160 )

[node name="Flag" type="TextureRect" parent="MainContainer/PanelContainer/CenterContainer/BottomContainer"]
margin_right = 160.0
margin_bottom = 160.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/PanelContainer/CenterContainer/BottomContainer"]
margin_left = 164.0
margin_top = 56.0
margin_right = 300.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HelloText" type="Label" parent="MainContainer/PanelContainer/CenterContainer/BottomContainer/VBoxContainer"]
margin_right = 136.0
margin_bottom = 14.0
text = "KEY_HELLO"
align = 1

[node name="HelloButton" type="Button" parent="MainContainer/PanelContainer/CenterContainer/BottomContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 136.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 30 )
text = "KEY_PUSH"

[connection signal="pressed" from="MainContainer/TopContainer/PanelContainer/VBoxContainer/English" to="." method="_on_English_pressed"]
[connection signal="pressed" from="MainContainer/TopContainer/PanelContainer/VBoxContainer/Spanish" to="." method="_on_Spanish_pressed"]
[connection signal="pressed" from="MainContainer/TopContainer/PanelContainer/VBoxContainer/Japanese" to="." method="_on_Japanese_pressed"]
[connection signal="pressed" from="MainContainer/TopContainer/PanelContainer/VBoxContainer/Laos" to="." method="_on_Laos_pressed"]
[connection signal="pressed" from="MainContainer/TopContainer/PanelContainer/VBoxContainer/Thai" to="." method="_on_Thai_pressed"]
